--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="parallax intro"></div>
+    <div class="cta">
+         <div class=" cta tittle"> hai yang di pondok </div>
+         </div>  
+         <div class="parallax content" ></div>
+         <div class="parallax footer" ></div>
     
 </body>
 </html>
